// 指定proto指定版本
syntax = "proto3";

option go_package = "../service";
// 指定文件生出出来的package
package service;

// 定义request model 请求
message ClusterRequest {
  string ClusterName = 1;
  float KubeRelease = 2;
  repeated string Region = 3;
  string ContainerRunTime = 4;
  string ContainerNetworkPlugins = 5;
  string ClusterCidr = 6;
  string ServiceCidr = 7;
  string ClusterDescribe = 8;
  string ClusterType = 9;
  string VipKubernetes = 10;
  map<string,string> MasterInfo = 11;
  map<string,string> NodeInfo = 12;
  repeated string NodeLogin = 13;
}

// 定义response model 返回
message ClusterResponse {
  string ClusterName = 1; // 1代表顺序
}

// 定义服务主体
service CreateService {
  // 定义方法
  rpc CreateCluster(ClusterRequest) returns(ClusterResponse);
}